# TRIGA-Engine-v1.0.0

.github/workflows/: release.yml
src-cpp/: CMakeLists.txt
src-cpp/assets/: README.md
src-cpp/assets/shaders/: README.md
src-cpp/include/triga/: Entity.h
src-cpp/include/triga/vfx/: VFXGraph.h
